# automate_threat_intelligence

./: .gitignore  .pre-commit-config.yaml  Dockerfile.ingest-alerts  README.md  TODO.md  azure-pipelines.yml  dev-requirements.in  docker-compose.yml  ingestion_pipeline.py  pyproject.toml  requirements.in  requirements.txt
alerts-ingestion-func-app/: feedly_sources.yaml  function_app.py  ingestion_pipeline.py  requirements.txt  todo.md
config/: alerts.json  config.py  mongo_config.json
infra/: README.md  TODO.md  dev.parameters.json  dev.params.bicepparam  main.bicep  provision-dev-infra.sh  provision-infra.sh
infra/modules/: keyVault.bicep
notebooks/: refactoring.md  todo.md
notes/: TODO.md  notes.md
python/: README.md  config.ini.example  feedly_fetcher.py  feedly_fetcher_mysql.py  feedy_fetcher_mongo.py
python/scripts/: test_local_mongo_db.py
scripts/: deploy-ingestion-pipline-local.sh  feedly_pipeline.py  ingestion_pipeline.py  ingestion_pipeline_trigger.sh  install_and_update_requirements.sh  mongo.sh  mongo_shell.sh  poll_feedly_pipeline.sh  provision-infra.sh  recorded_future_fetch_test.py  trigger_ingestion_pipeline.sh
src/config_managers/: configs_manager.py  secrets_manager.py
src/data_access/datastores/: __init__.py  alerts.py
src/data_access/fetchers/: __init__.py  abstract.py  feedly.py
src/data_accessors/: config.py  config_old.py
src/data_accessors/datastores/: abstract.py  alerts.py
src/data_accessors/fetchers/: feedly.py
src/fetchers/: client_interface.py  feedly_client.py
src/frontend/: index.html  script.js  style.css
src/models/: alerts_table_document.py  enums.py  processing_queue_message.py  triage_staging_table_document.py  triage_table_entity.py
tests/: conftest.py
tests/fetchers/: feedly_fetcher_test.py
tests/fetchers/mock_data/: feedly_mock_data.json
tests/unit/: .env.test  todo.md
tests/unit/data_access/: .env.test  conftest.py
tests/unit/data_access/config/: config_test.py  mock_alerts_sources_invalid_access_token.yaml
tests/unit/data_access/datastores/: alerts_test.py
tests/unit/data_access/fetchers/: feedly_test.py
tests/unit/data_access/mock_data/: feedly_mock_data.json
tests/unit/data_accessors/: conftest.py
tests/unit/data_accessors/config/: config_test.py  mock_alerts_sources.yaml  mock_alerts_sources_invalid_article_count.yaml
tests/unit/src/: conftest.py
triage-portal-func-app/: function_app.py  proxies.json
triage-portal-func-app/api/: __init__.py  main.py
triage-portal-func-app/frontend/: package-lock.json  package.json
(+8 files in other folders)
